[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/smoothing/smoothing.gd" type="Script" id=1]
[ext_resource path="res://addons/smoothing/smoothing.png" type="Texture" id=2]
[ext_resource path="res://Target.gd" type="Script" id=3]
[ext_resource path="res://addons/smoothing/smoothing_2d.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]
[ext_resource path="res://Target2D.gd" type="Script" id=6]
[ext_resource path="res://Root.gd" type="Script" id=7]
[ext_resource path="res://addons/smoothing/smoothing_2d.png" type="Texture" id=8]
[ext_resource path="res://smooth_icon.png" type="Texture" id=9]
[ext_resource path="res://Target2D_flipped.gd" type="Script" id=10]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.537255, 0.643137, 1, 1 )

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="Environment" id=5]

[node name="Root" type="Spatial"]
script = ExtResource( 7 )

[node name="Example2D" type="Node2D" parent="."]

[node name="Target2D" type="Node2D" parent="Example2D"]
position = Vector2( 0, 300 )
scale = Vector2( 2, 2 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Example2D/Target2D"]
texture = ExtResource( 5 )

[node name="Smoothing2D" type="Node2D" parent="Example2D/Target2D"]
position = Vector2( 0, -150 )
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 8 )
}
flags = 63

[node name="Sprite_smoothed" type="Sprite" parent="Example2D/Target2D/Smoothing2D"]
texture = ExtResource( 5 )

[node name="Target2D_flipped" type="Node2D" parent="Example2D"]
script = ExtResource( 10 )

[node name="Smoothing2D" type="Node2D" parent="Example2D/Target2D_flipped"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Example2D/Target2D_flipped/Smoothing2D"]
texture = ExtResource( 9 )

[node name="Example3D" type="Spatial" parent="."]

[node name="Target" type="Spatial" parent="Example3D"]
script = ExtResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Example3D/Target"]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Smoothing" type="Spatial" parent="Example3D/Target"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
script = ExtResource( 1 )
__meta__ = {
"_editor_icon": ExtResource( 2 )
}

[node name="MeshInstance_smoothed" type="MeshInstance" parent="Example3D/Target/Smoothing"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.77548 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 5 )
